# paperwrite

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
cli/: cli.py  templates.py  tex_parser.py
outline/: abstract.md  conclusion.md  discussion.md  experiments.md  introduction.md  method.md  related_work.md  results.md  structure.md
paper/: main.tex  preamble.tex  references.bib
paper/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex  results.tex
paperwrite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sparks/: experiments.md  innovations.md  motivation.md  questions.md  related_work.md  results.md  writing_log.md
