[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "paperwrite"
version = "0.1.0"
description = "Academic paper vibe writing scaffolding tool"
requires-python = ">=3.8"
dependencies = ["click"]

[tool.setuptools.packages.find]
include = ["cli*"]

[project.scripts]
paperwrite = "cli.cli:main"
